--- a/agrinho.css
+++ b/agrinho.css
@@ -1,12 +1,13 @@
 body {
     padding: 0;
     margin: 0;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    display: flex;
+    overflow-x: hidden;
 }
 
-img {
+.cu {
+    width: 50px;
+    height: 50px;
+    background-color: black;
     position: relative;
-    left: 200vw;
+    left: 3000px;
 }
