--- a/agrinho.css
+++ b/agrinho.css
@@ -1,13 +1,67 @@
 body {
     padding: 0;
     margin: 0;
+    overflow-y: hidden;
     overflow-x: hidden;
 }
 
-.cu {
+.mato1 {
+    position: absolute;
+    width: 30vw;
+}
+
+.mato2 {
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    position: absolute;
+    width: 30vw;
+    right: 0vw;
+}
+
+.matooutrolado1 {
+    position: absolute;
+    width: 30vw;
+    right: -30vw;
+}
+
+.mato3 {
+    position: absolute;
+    transform: scaleY(-1);
+    width: 30vw;
+    bottom: 0vw;
+}
+
+.mato4 {
+    -webkit-transform: scaleX(-1);
+    transform: scaleY(-1);
+    position: absolute;
+    width: 30vw;
+    right: 0vw;
+    bottom: 0vh;
+}
+
+.titulo1, .titulo2 {
+    text-align: center;
+    font-family: 'Montserrat';
+    font-weight: 300;
+}
+
+.titulo1 {
+    font-size: 60px;
+}
+
+.titulo2 {
+    font-size: 40px;
+}
+
+.titulo {
+    padding-top: 35vh;
+}
+
+.cubo {
+    background-color: black;
     width: 50px;
     height: 50px;
-    background-color: black;
     position: relative;
-    left: 3000px;
+    left: 4000px;   
 }
