--- a/agrinho.css
+++ b/agrinho.css
@@ -16,11 +16,11 @@ body {
 }
 
 .titulo1 {
-    font-size: 65px;
+    font-size: 3vw;
 }
 
 .titulo2 {
-    font-size: 45px;
+    font-size: 2vw;
 }
 
 .titulo {
@@ -34,7 +34,7 @@ body {
 .chapeu {
     position: absolute;
     width: 5vw;
-    bottom: 59vh;
+    bottom: 60vh;
     right: 47.5vw;
 }
 
@@ -119,16 +119,15 @@ body {
 
 .dialogue-container {
     position: absolute;
-    right: 0vw;
-    bottom: 0vh;
+    right: -308vw;
+    bottom: 2vh;
+    padding: 30vw;
 }
 
 .character-message {
     position: absolute;
     font-family: monospace;
-    font-size: 30px;
-    right: -300vw;
-    bottom: 60vh;   
+    font-size: 20px; 
     z-index: 2;
 }
 
@@ -136,9 +135,36 @@ body {
     position: absolute;
     font-family: monospace;
     font-size: 30px;
-    right: -290vw;
-    bottom: 50vh;
-    z-index: 2;
+    text-align: right;
+    z-index: 11;
+}
+
+.character-dialogue {
+    position: absolute;
+    bottom: 10vh;
+    left: 12vw;
+    background: url('Imagens/balaodefala.png') no-repeat;
+    background-size: contain;
+    width: 55vw;
+    height: 55vh;
+    bottom: 35vh;
+    z-index: 10;
+}
+
+.textomenor {
+    position: absolute;
+    left: 5vw;
+    bottom: 15vh;  
+    width: 22vw;
+    height: 15vw;
+}
+
+.opcoesmenores {
+    position: absolute;
+    width: 10vw;
+    height: 10vh;
+    left: 20vw;
+    bottom: 0vh;
 }
 
 .option-button {
@@ -149,6 +175,7 @@ body {
     padding: 10px;
     margin: 5px 0;
     cursor: pointer;
+    z-index: 11;
 }
 
 .option-button:hover {
@@ -167,8 +194,8 @@ body {
 .character-image {
     position: absolute;
     width: 22vw;
-    bottom: 2vh;
-    right: -275vw;
+    bottom: 0vh;
+    left: 0vw;;
     z-index: 3;
     cursor: pointer;
     -webkit-user-drag: none;
