--- a/cidade.css
+++ b/cidade.css
@@ -160,27 +160,52 @@ body {
 
 .dialogue-container {
     position: absolute;
+    right: -297vw;
     bottom: 16vh;
-    left: 360vw;
-    padding: 200px;
+    padding: 20vw;
 }
 
 .character-message {
     position: absolute;
     font-family: monospace;
-    font-size: 30px;
-    bottom: 40vh;
-    left: -35vw;
-    z-index: 10;
+    font-size: 18px; 
+    z-index: 2;
 }
 
 .user-options {
     position: absolute;
     font-family: monospace;
     font-size: 30px;
+    text-align: left;
+    z-index: 11;
+}
+
+.character-dialogue {
+    position: absolute;
+    top: 12vh;
+    left: 1vw;
+    background: url('Imagens/balaodefala.png') no-repeat;
+    background-size: contain;
+    width: 50vw;
+    height: 52vh;
+    bottom: 35vh;
+    z-index: 12;
+}
+
+.textomenor {
+    position: absolute;
+    left: 4vw;
+    bottom: 12vh;  
+    width: 22vw;
+    height: 15vw;
+}
+
+.opcoesmenores {
+    position: absolute;
+    width: 10vw;
+    height: 10vh;
+    left: -12vw;
     bottom: 30vh;
-    left: -35vw;
-    z-index: 10;
 }
 
 .option-button {
@@ -191,6 +216,7 @@ body {
     padding: 10px;
     margin: 5px 0;
     cursor: pointer;
+    z-index: 11;
 }
 
 .option-button:hover {
@@ -211,7 +237,7 @@ body {
     position: absolute;
     width: 8vw;
     bottom: 16vh;
-    left: 370vw;
+    left: 367vw;
     z-index: 11;
 }
 
@@ -219,7 +245,7 @@ body {
     position: absolute;
     width: 4vw;
     bottom: 16vh;
-    left: 380vw;
+    left: 377vw;
     z-index: 11;
 }
 
